12/20/2009:
    Change logic to graph calculation which corrects the following rendering issues -
        Graph lines drawing outside of border/frame
        Graph normalized top-value was rendering off-screen when applet size smaller than 35
        Graph normalized top-value was rendering very low on the graph when applet size greater than 60
    Changed scaling of initial icon - it was rendering too large and centered text was displayed with an odd alignment to the dock
    Fixed some issues with default values
    Changed short-name to 'bandwidth-monitor' to match schema file
    Corrected path to UI file
    Fixed division by zero error
    Addedd bandwidth-monitor.ui and bwmprefs.py to Makefile.am



12/19/2009:
    Added preferences to control -
        Enable/Disable drawing of the background
        Enable/Disable drawing of the border
        Select color/opacity of background
        Select color/opacity of border
        Options to control the text representation of throughput
            Display Upload/Download text
            Display Sum text only
            Do not display text - only draw the graph.
        Enable/Disable drawing the zero value in the graph (if true, draw a line at the bottom of the graph for zero value)

12/18/2009:
    Cleaned up code to make it run faster or use less resources
    Removed everything related to the status of interfaces (Not required, may add later)
    Removed everything related to IP Addresses for interfaces (Not required, may add later)

12/16/2009:
    Added call to applet.errors.general if read access to /proc/net/dev fails.
    Made changes to TODO file
    Change parser logic for to handle interfaces with less than 11 columns of output in 'netstat -iea'    

12/14/2009:
    Created preferences dialog to manage options -
        An option to select the unit Bytes/bits
        A spinbutton entry for setting the minimum threshold