@@ -1,3 +1,9 @@
+01/02/2010:
+    Fixed bug which caused the unit of measure checkbutton to become out of sync with the gconf value
+    Changed default interface to '', was wlan0 for some reason..
+    PEP8 verified - mostly complaint, a few lines are "too long"
+    Replaced icon
+
 12/20/2009:
     Change logic to graph calculation which corrects the following rendering issues -
         Graph lines drawing outside of border/frame
@@ -9,8 +15,6 @@
     Corrected path to UI file
     Fixed division by zero error
     Addedd bandwidth-monitor.ui and bwmprefs.py to Makefile.am
-
-
 
 12/19/2009:
     Added preferences to control -
